--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -30,7 +30,7 @@
                target="_blank">Zoom Link</a>
           </p>
           <div class="next-to-button">
-            Just hop on! We meet every Tuesday at 5pm CET / 4pm UTC / 11am EDT / 8am PT.
+            Just hop on! We meet every Tuesday at 5pm CEST / 3pm UTC / 11am EST / 8am PDT.
           </div>
         </div>
 
