--- a/src/app/reading-group/reading-group.component.html
+++ b/src/app/reading-group/reading-group.component.html
@@ -134,94 +134,6 @@
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
-                <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.02905"
-                   target="_blank">
-                  Geometric and Physical Quantities Improve E(3) Equivariant Message Passing (2022)
-                </a></h3>
-            </div>
-            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
-              <div>
-                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
-                15th of March 2022
-              </div>
-              <div>
-                <a>
-                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
-                  Johannes Brandstetter, Rob Hesselink, Elise van der Pol, Erik J Bekkers, Max Welling
-                </a>
-              </div>
-            </div>
-            <div>
-              <iframe ngClass.gt-sm="float-right" [src]='safeURLSEGNN' allowfullscreen></iframe>
-              <p class="paragraph">
-                <a class="slight-bold">Resources:</a>
-                Their <a class="item-subtitle link-style-black"
-                         href="https://www.chaitjo.com/post/deep-learning-for-routing-problems/SEGNN.pdf"
-                         target="_blank">slides</a>. (104 participants)
-              </p>
-              <p class="paragraph">
-                <a class="slight-bold">Speaker:</a>
-                First author of the paper professor <a
-                class="item-subtitle link-style-black"
-                href="https://www.jku.at/institut-fuer-machine-learning/ueber-uns/team/ass-prof-dr-johannes-brandstetter/"
-                target="_blank">Johannes Brandstetter</a> who holds his
-                professorship at JKU Linz, where he previously worked with Prof. Sepp Hochreiter. He is a guest
-                researcher
-                at the University of Amsterdam in Prof. Max Wellings's group and started working with Microsoft's
-                molecular ML group. He has a physics and data science background and was one of the main researchers at
-                CERN who made the first direct observation of the Higgs boson decayinginto pairs of fermions! Next to
-                his
-                impressive work on physics-informed ML he also works on RL, NLP, Few-Shot Learning, and Generative
-                Modeling. Also joining us was Professor <a
-                class="item-subtitle link-style-black"
-                href="https://erikbekkers.bitbucket.io/"
-                target="_blank">Erik Bekkers</a>!
-              </p>
-              <p class="no-margin">
-                <a class="slight-bold">Abstract:</a>
-                Including covariant information, such as position, force, velocity or spin is important in many tasks in
-                computational physics and chemistry. We introduce Steerable E(3) Equivariant Graph Neural Networks
-                (SEGNNs) that generalise equivariant graph networks, such that node and edge attributes are not
-                restricted
-                to invariant scalars, but can contain covariant information, such as vectors or tensors. This model,
-                composed of steerable MLPs, is able to incorporate geometric and physical information in both the
-                message
-                and update functions. Through the definition of steerable node attributes, the MLPs provide a new class
-                of
-                activation functions for general use with steerable feature fields. We discuss ours and related work
-                through the lens of equivariant non-linear convolutions, which further allows us to pin-point the
-                successful components of SEGNNs: non-linear message aggregation improves upon classic linear (steerable)
-                point convolutions; steerable messages improve upon recent equivariant graph networks that send
-                invariant
-                messages. We demonstrate the effectiveness of our method on several tasks in computational physics and
-                chemistry and provide extensive ablation studies.
-              </p>
-            </div>
-          </div>
-
-        </div>
-        <div fxFlex="10" fxFlex.xs="2"></div>
-      </div>
-    </div>
-
-    <div id="Schedule">
-      <div>
-        <div fxFlex="10" fxFlex.xs="2"></div>
-        <div fxFlex="80" fxFlex.xs="96" class="underline-title">
-          <h1 class="left-titles">SCHEDULE</h1>
-        </div>
-        <div fxFlex="10" fxFlex.xs="2"></div>
-      </div>
-
-
-      <div>
-        <div fxFlex="10" fxFlex.xs="2"></div>
-        <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
-
-
-          <div class="item" fxLayout="column">
-            <div fxLayout="row">
-              <h3>
                 <a class="item-subtitle link-style-black" href="http://vladlen.info/papers/neural-fields.pdf"
                    target="_blank">
                   Geometry Processing with Neural Fields (2021)
@@ -239,6 +151,14 @@
                 </a>
               </div>
             </div>
+            <div>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLGeomProc' allowfullscreen></iframe>
+              <p class="paragraph">
+                <a class="slight-bold">Resources:</a>
+                Guandao's <a class="item-subtitle link-style-black"
+                         href="https://hannes-stark.com/assets/NeurIPS2021-GPwithNIF-Mar22.pdf"
+                         target="_blank">slides</a>. (67 participants)
+              </p>
             <p class="paragraph">
               <a class="slight-bold">Speaker:</a>
               First author <a
@@ -265,10 +185,30 @@
               href="https://github.com/stevenygd/NFGP"
               target="_blank">https://github.com/stevenygd/NFGP</a>.
             </p>
+            </div>
           </div>
 
+        </div>
+        <div fxFlex="10" fxFlex.xs="2"></div>
+      </div>
+    </div>
 
-          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+    <div id="Schedule">
+      <div>
+        <div fxFlex="10" fxFlex.xs="2"></div>
+        <div fxFlex="80" fxFlex.xs="96" class="underline-title">
+          <h1 class="left-titles">SCHEDULE</h1>
+        </div>
+        <div fxFlex="10" fxFlex.xs="2"></div>
+      </div>
+
+
+      <div>
+        <div fxFlex="10" fxFlex.xs="2"></div>
+        <div fxFlex="80" fxFlex.xs="96" fxLayout="column">
+
+
+
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
@@ -504,6 +444,66 @@
           <div class="item" fxLayout="column">
             <div fxLayout="row">
               <h3>
+                <a class="item-subtitle link-style-black" href="http://vladlen.info/papers/neural-fields.pdf"
+                   target="_blank">
+                  Geometry Processing with Neural Fields (2021)
+                </a></h3>
+            </div>
+            <div fxLayout.gt-md="row" fxLayout="column" class="paragraph">
+              <div>
+                <fa-icon class="icon-right-margin" [icon]="calendar"></fa-icon>
+                22nd of March 2022
+              </div>
+              <div>
+                <a>
+                  <fa-icon ngClass.gt-md="icon-right-margin--left" [icon]="authors"></fa-icon>
+                  Guandao Yang, Serge Belongie, Bharath Hariharan, Vladlen Koltun
+                </a>
+              </div>
+            </div>
+            <div>
+              <iframe ngClass.gt-sm="float-right" [src]='safeURLGeomProc' allowfullscreen></iframe>
+              <p class="paragraph">
+                <a class="slight-bold">Resources:</a>
+                Guandao's <a class="item-subtitle link-style-black"
+                         href="https://hannes-stark.com/assets/NeurIPS2021-GPwithNIF-Mar22.pdf"
+                         target="_blank">slides</a>. (67 participants)
+              </p>
+            <p class="paragraph">
+              <a class="slight-bold">Speaker:</a>
+              First author <a
+              class="item-subtitle link-style-black"
+              href="https://www.guandaoyang.com/"
+              target="_blank">Guandao Yang</a>, who is a a Computer Science PhD student at Cornell University, advised
+              by Serge Belongie and Bharath Hariharan. His research interests include computer vision for augmented
+              reality and 3D generation.
+            </p>
+            <p class="no-margin">
+              <a class="slight-bold">Abstract:</a>
+              Most existing geometry processing algorithms use meshes as the default shape representation. Manipulating
+              meshes, however, requires one to maintain high quality in the surface discretization. For example,
+              changing the topology of a mesh usually requires additional procedures such as remeshing. This paper
+              instead proposes the use of neural fields for geometry processing. Neural fields can compactly store
+              complicated shapes without spatial discretization. Moreover, neural fields are infinitely differentiable,
+              which allows them to be optimized for objectives that involve higher-order derivatives. This raises the
+              question: can geometry processing be done entirely using neural fields? We introduce loss functions and
+              architectures to show that some of the most challenging geometry processing tasks, such as deformation and
+              filtering, can be done with neural fields. Experimental results show that our methods are on par with the
+              well-established mesh-based methods without committing to a particular surface discretization. Code is
+              available at <a
+              class="item-subtitle link-style-black"
+              href="https://github.com/stevenygd/NFGP"
+              target="_blank">https://github.com/stevenygd/NFGP</a>.
+            </p>
+            </div>
+          </div>
+
+
+          <hr ngClass.gt-sm="separator" ngClass.lt-md="separator--small">
+
+          <div class="item" fxLayout="column">
+            <div fxLayout="row">
+              <h3>
                 <a class="item-subtitle link-style-black" href="https://arxiv.org/abs/2110.02905"
                    target="_blank">
                   Geometric and Physical Quantities Improve E(3) Equivariant Message Passing (2022)
@@ -526,7 +526,7 @@
               <p class="paragraph">
                 <a class="slight-bold">Resources:</a>
                 Their <a class="item-subtitle link-style-black"
-                         href="https://www.chaitjo.com/post/deep-learning-for-routing-problems/SEGNN.pdf"
+                         href="https://hannes-stark.com/assets/SEGNN.pdf"
                          target="_blank">slides</a>. (104 participants)
               </p>
               <p class="paragraph">
