--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -109,7 +109,7 @@
 
               <p class="item-date-loc">
                 <fa-icon class="icon-right-margin" [icon]="authors"></fa-icon>
-                Hannes Stärk, Octavian-Eugen Ganea, Lagnajit Pattanaik, Regina Barzilay, Tommi Jaakkola
+                Hannes Stärk*, Octavian-Eugen Ganea*, Lagnajit Pattanaik, Regina Barzilay, Tommi Jaakkola
 
                     <fa-icon class="icon-right-margin--left" [icon]="book"></fa-icon>
                     <i>Under review.</i>
